WebRoot/js/zimbraMail/config/style/msgview.css
/*
 * ***** BEGIN LICENSE BLOCK *****
 * Version: ZPL 1.2
 * 
 * The contents of this file are subject to the Zimbra Public License
 * Version 1.2 ("License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 * http://www.zimbra.com/license
 * 
 * Software distributed under the License is distributed on an "AS IS"
 * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
 * the License for the specific language governing rights and limitations
 * under the License.
 * 
 * The Original Code is: Zimbra Collaboration Suite Web Client
 * 
 * The Initial Developer of the Original Code is Zimbra, Inc.
 * Portions created by Zimbra are Copyright (C) 2005, 2006 Zimbra, Inc.
 * All Rights Reserved.
 * 
 * Contributor(s):
 * 
 * ***** END LICENSE BLOCK *****
 */

P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON, A {
	@FontDefault@
	@FontNormal@
}


.MsgHeader .Object, .MsgHeader .Object-activated {
	white-space: nowrap;
}

.MsgBody-text, .MsgBody-text * { 
	@Text@
	@FontFixed@
}

body.MsgBody { 
	@Text@
	padding: 10px; 
}

.MsgBody .SignatureText { color: gray; }
.MsgBody .QuotedText0 { color: purple; }
.MsgBody .QuotedText1 { color: green; }
.MsgBody .QuotedText2 { color: red; }


.Object {
	@AnchorText@
	@ZimletBg@
}

.Object-activated {
	@AnchorTextHover@
	@ZimletBg-Hover@
}

.Object-triggered {
	color: blue;
}


.FakeAnchor, 
a:link, a:visited {
	@AnchorText@
}

a:hover {
	@AnchorTextHover@
}

a:active {
	@AnchorTextClick@
}




.POObject {color: blue;}
.POObjectApproved {color: green;}
.POObjectRejected {color: red;}



.zimbraHide {
	display: none;
}

