http://bugzilla.zimbra.com/show_bug.cgi?id=5869 Bug: 5869 In message view, enable wrapping of text that's surrounded by <pre> tags.
Copied from Perforce
 Change: 25872

--- a/WebRoot/js/zimbraMail/config/style/msgview.css
+++ b/WebRoot/js/zimbraMail/config/style/msgview.css
@@ -89,3 +89,14 @@ a:active {
 .zimbraHide {
 	display: none;
 }
+
+pre { /* ripped off from http://cheeaun.phoenity.com/weblog/2005/06/whitespace-and-generated-content.html */
+	white-space: pre; /* CSS2 */
+	white-space: -moz-pre-wrap; /* Mozilla */
+	white-space: -hp-pre-wrap; /* HP printers */
+	white-space: -o-pre-wrap; /* Opera 7 */
+	white-space: -pre-wrap; /* Opera 4-6 */
+	white-space: pre-wrap; /* CSS 2.1 */
+	white-space: pre-line; /* CSS 3 (and 2.1 as well, actually) */
+	word-wrap: break-word; /* IE */
+}
